kubernetes/app/09-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "acme-issuer"
spec:
  ingressClassName: nginx
  rules:
  - host: "nginx.vergl.cloud"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx 
            port:
              number: 80
  tls:
  - hosts:
    - nginx.vergl.cloud  # Your hostname
    secretName: nginx-cert  # Your TLS Secret
  # ---
